--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LuxStay Hotels | Luxury Accommodations</title>
+    <title>PANORA | AVARI BOOKING PAGE</title>
     <meta name="description" content="Experience luxury and comfort at LuxStay Hotels. Book your perfect stay with our premium accommodations and world-class amenities." />
   </head>
   <body>
